<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".navigation.HomeFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@drawable/background_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_centerVertical="true"
            android:id="@+id/cv_profil"
            android:src="@drawable/k"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        <TextView
            android:id="@+id/tv_nama"
            android:text="@string/nama_profil"
            android:textSize="16dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_toEndOf="@id/cv_profil"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@id/cv_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_deskripsi"
            android:text="@string/deskripsi_profil"
            android:textSize="10dp"
            android:textColor="@color/colorPrimary"
            android:layout_toEndOf="@id/cv_profil"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@id/cv_profil"
            android:layout_marginTop="8dp"
            android:layout_below="@id/tv_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <LinearLayout
        android:background="@drawable/background_interest"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="Interest"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimary"
            android:text="Hobby"
            android:textSize="17dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_hobby"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/deskripsi_hobby"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimary"
            android:text="Makes"
            android:textSize="17dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_makes"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/deskripsi_makes"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimary"
            android:text="Mikes"
            android:textSize="17dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_mikes"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/deskripsi_mikes"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimary"
            android:text="Interest"
            android:textSize="17dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_interest"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/deskripsi_interest"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimary"
            android:text="Cita Cita"
            android:textSize="17dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_cita_cita"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/deskripsi_cita_cita"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
        <TextView
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>
</ScrollView>
</FrameLayout>